--- a/README.adoc
+++ b/README.adoc
@@ -24,3 +24,8 @@ You should have received a copy of the GNU Affero General Public License
 along with this program. If not, see <http://www.gnu.org/licenses/>.
 
 See the <<LICENSE#,LICENSE>> file for details.
+
+
+== Dev Testing
+npm install
+npm start
